# subdocx

./: .dockerignore  .env.local  .gitignore  Dockerfile  README.md  pyproject.toml  test_Conv.docx
src/subdocx/: __init__.py  batch.py  config.py  errors.py  export.py  format.py  io.py  services.py  settings.py  substitution.py  substitution_options.py  template.py  use.py  utils.py
src/subdocx/api/: __main__.py  dependencies.py  main.py  schemas.py
subdocx/: __init__.py  config.py  format.py  io.py  substitution.py  template.py  utils.py
subdocx/api/: __main__.py  main.py
