[project]
name = "subdocx"
version = "0.1.1.dev1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.124.2",
  "pandas>=2.3.3",
  "pydantic>=2.12.5",
  "python-docx>=1.2.0",
  "python-multipart>=0.0.20",
]

[project.optional-dependencies]
uvicorn = ["uvicorn>=0.38.0"]

# [tool.uv]
# package = true
