[project]
name = "subdocx"
version = "0.1.1.dev1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]>=0.124.2",
  "pandas>=2.3.3",
  "python-docx>=1.2.0",
  "python-multipart>=0.0.20",
  "requests>=2.32.5",
]

[project.optional-dependencies]
uvicorn = ["uvicorn>=0.38.0"]
cli = ["pydantic>=2.12.5", "pydantic-settings>=2.12.0", "python-box>=7.3.2"]

[project.scripts]
subdocx = "subdocx.api.__main__:cli"
