[project]
name = "subdocx"
version = "0.1.1.dev1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["babel>=2.18.0", "pandas>=2.3.3", "python-docx>=1.2.0"]

[project.optional-dependencies]
cli = [
  "fastapi[standard]>=0.124.2",
  "uvicorn>=0.38.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "python-box>=7.3.2",
]
pdf = ["requests>=2.32.5"]

[project.scripts]
subdocx = "subdocx.api.__main__:cli"

[tool.uv]
package = true

[tool.uv.workspace]
members = ["s2"]
